feat:ajout des service

--- a/app/.env.dev
+++ b/app/.env.dev
@@ -1,3 +1,9 @@
 DEBUG=1
 SECRET_KEY=(-3138u9#$9t6-i#f&fc-feeh#cqs(=nzfzx5a5k-*m$%()n(e
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+SQL_ENGINE=django.db.backends.postgresql
+SQL_DATABASE=movie_db
+SQL_USER=postgres
+SQL_PASSWORD=root
+SQL_HOST=hooyiat
+SQL_PORT=5432
