--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -3,10 +3,23 @@ version: '3.9'
 services:
   movies:
     build: /home/ing/wprojects/django-tdd-docker/app
-    command: python ./manage.py runserver 0.0.0.0:8000
-    volumes:
-      - ./app/:/home/ing/wprojects/django-tdd-docker/app
+    command: 
+        python manage.py runserver 0.0.0.0:8000
     ports:
-      - 8009:8000
+      - 8000:8000
     env_file:
       - .env.dev
+
+    depends_on:
+      - movies-db 
+  movies-db:
+    image: postgres:14-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=movies
+      - POSTGRES_PASSWORD=movies
+      - POSTGRES_DB=movies_dev
+
+volumes:
+  postgres_data:     
