fead: begining with test

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,7 @@
 FROM python:3.10.8-slim-buster
 
 # définir le répertoire de travail
-ENV DockerHOME=/home/ing/wprojects/django-tdd-docker/app
+ENV DockerHOME=/home/ing/wprojects/django-tdd-docker/app/
 RUN mkdir -p $DockerHOME  
 WORKDIR $DockerHOME  
 
@@ -12,10 +12,10 @@ ENV PYTHONUNBUFFERED 1
 
 COPY . $DockerHOME 
 
-# installer dépendances system
-RUN apt-get update \
-  && apt-get -y install gcc postgresql \
-  && apt-get clean
+# # installer dépendances system
+# RUN apt-get update \
+#   && apt-get -y install gcc postgresql \
+#   && apt-get clean
 
 # installer les dépendances
 RUN pip install --upgrade pip
@@ -25,9 +25,9 @@ RUN pip install -r requirements.txt
 
 # copier entrypoint.sh
 COPY ./entrypoint.sh ${DockerHOME}/entrypoint.sh
-RUN chmod +x ${DockerHOME}entrypoint.sh
+RUN chmod +x /home/ing/wprojects/django-tdd-docker/app/entrypoint.sh
 
 # ajouter l'application
 COPY . .
 
-ENTRYPOINT ["${DockerHOME}/entrypoint.sh"]
+ENTRYPOINT ["/home/ing/wprojects/django-tdd-docker/app/entrypoint.sh"]
